--- a/pom.xml
+++ b/pom.xml
@@ -443,6 +443,7 @@
         <version>0.8</version>
         <configuration>
           <excludes>
+            <exclude>src/main/resources/META-INF/services/**/*</exclude>
             <exclude>.idea/**/*</exclude>
             <exclude>src/test/resources/**/*</exclude>
           </excludes>
