New site theme adapted from log4php. No changes to code or docs.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1410723 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -272,12 +272,12 @@
               <goal>copy-resources</goal>
             </goals>
             <configuration>
-              <outputDirectory>${project.build.directory}/site/css</outputDirectory>
+              <outputDirectory>${project.build.directory}/site</outputDirectory>
               <resources>
                 <resource>
-                  <directory>${log4jParentDir}/src/site/resources/css</directory>
+                  <directory>${log4jParentDir}/src/site/resources</directory>
                   <includes>
-                    <include>**/site.css</include>
+                    <include>**/*</include>
                   </includes>
                 </resource>
               </resources>
