Add MessageFormatMessage and FormattedMessage.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1422198 13f79535-47bb-0310-9956-ffa450edef68

--- a/jcl-bridge/pom.xml
+++ b/jcl-bridge/pom.xml
@@ -49,7 +49,12 @@
     </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
