--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -88,4 +88,17 @@
     <module>flume-remote</module>
     <module>flume-embedded</module>
   </modules>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-site-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+          <skip>true</skip>
+          <skipDeploy>true</skipDeploy>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
