--- a/slf4j-impl/pom.xml
+++ b/slf4j-impl/pom.xml
@@ -49,6 +49,7 @@
      <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
