Add Log4j 2 to SLF4J adapter
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1429628 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,13 @@
       </dependency>
       <dependency>
         <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-core</artifactId>
+        <type>test-jar</type>
+        <version>${logback.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>ch.qos.logback</groupId>
         <artifactId>logback-classic</artifactId>
         <version>${logback.version}</version>
       </dependency>
@@ -526,6 +533,7 @@
     <module>core</module>
     <module>log4j12-api</module>
     <module>slf4j-impl</module>
+    <module>log4j-to-slf4j</module>
     <module>jcl-bridge</module>
     <module>flume-ng</module>
     <module>web</module>
