--- a/samples/flume-embedded/pom.xml
+++ b/samples/flume-embedded/pom.xml
@@ -16,13 +16,12 @@
  limitations under the License.
 
 -->
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>log4j-samples</artifactId>
     <groupId>org.apache.logging.log4j.samples</groupId>
-    <version>2.0-beta4-SNAPSHOT</version>
+    <version>2.0-beta4</version>
   </parent>
   <groupId>org.apache.logging.log4j.samples</groupId>
   <artifactId>flume-embedded</artifactId>
