--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,8 @@
     <slf4j.version>1.7.2</slf4j.version>
     <logback.version>1.0.7</logback.version>
     <log4jParentDir>${basedir}</log4jParentDir>
-    <Log4jReleaseVersion>2.0-beta4</Log4jReleaseVersion>
+    <Log4jReleaseVersion>2.0-beta5</Log4jReleaseVersion>
+    <Log4jReleaseCount>seventh</Log4jReleaseCount>
     <jackson.version>1.9.2</jackson.version>
     <!-- Configuration properties for the OSGi maven-bundle-plugin -->
     <osgi.symbolicName>org.apache.logging.${project.artifactId}</osgi.symbolicName>
@@ -604,6 +605,7 @@
               <version>${Log4jReleaseVersion}</version>
               <announceParameters>
                 <releaseVersion>${Log4jReleaseVersion}</releaseVersion>
+                <releaseCount>${Log4jReleaseCount}</releaseCount>
               </announceParameters>
               <useJql>true</useJql>
             </configuration>
