Add Persistent Flume Appender
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1457624 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -193,6 +193,11 @@
         <version>${project.version}</version>
       </dependency>
       <dependency>
+        <groupId>com.sleepycat</groupId>
+        <artifactId>je</artifactId>
+        <version>5.0.73</version>
+      </dependency>
+      <dependency>
         <groupId>org.osgi</groupId>
         <artifactId>core</artifactId>
         <version>4.3.0</version>
@@ -517,7 +522,14 @@
       </plugin>
     </plugins>
   </reporting>
-
+  <repositories>
+    <repository>
+      <id>oracleReleases</id>
+      <name>Oracle Released Java Packages</name>
+      <url>http://download.oracle.com/maven</url>
+      <layout>default</layout>
+    </repository>
+  </repositories>
   <distributionManagement>
      <repository>
       <id>apache.releases.https</id>
