LOG4J2-163, LOG4J2-164, LOG4J2-151. LOG4J2-153. LOG4J2-157 - Add Asynchronous Loggers
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1463078 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -115,8 +115,8 @@
     <javadoc.plugin.version>2.9</javadoc.plugin.version>
     <surefire.plugin.version>2.12.4</surefire.plugin.version>
     <manifestfile>target/osgi/MANIFEST.MF</manifestfile>
-    <maven.compile.source>1.5</maven.compile.source>
-    <maven.compile.target>1.5</maven.compile.target>
+    <maven.compile.source>1.6</maven.compile.source>
+    <maven.compile.target>1.6</maven.compile.target>
     <docLabel>Site Documentation</docLabel>
     <projectDir />
   </properties>
@@ -556,6 +556,7 @@
     <module>flume-ng</module>
     <module>web</module>
     <module>samples</module>
+    <module>log4j-async</module>
   </modules>
   <profiles>
     <profile>
