LOG4J2-193 - RollingFastFileAppender (in log4j-async) did not roll over.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1465503 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,18 @@
       <email>sdeboy@apache.org</email>
     </developer>
   </developers>
+  <contributors>
+    <contributor>
+      <name>Remko Popma</name>
+      <email>remkop@yahoo.com</email>
+      <roles>
+        <role>log4j-async module development, testing and documentation</role>
+      </roles>
+      <timezone>+9</timezone>
+      <properties>
+      </properties>
+    </contributor>
+  </contributors>
   <mailingLists>
     <mailingList>
       <name>log4j-user</name>
