--- a/pom.xml
+++ b/pom.xml
@@ -257,7 +257,7 @@
  	    <dependency>
         <groupId>javax.servlet</groupId>
         <artifactId>servlet-api</artifactId>
-        <version>2.4</version>
+        <version>2.5</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
@@ -567,6 +567,7 @@
     <module>jcl-bridge</module>
     <module>flume-ng</module>
     <module>web</module>
+    <module>taglib</module>
     <module>samples</module>
     <module>log4j-async</module>
   </modules>
