--- a/taglib/pom.xml
+++ b/taglib/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <!--
  Licensed to the Apache Software Foundation (ASF) under one or more
  contributor license agreements.  See the NOTICE file distributed with
@@ -24,20 +25,46 @@
     <relativePath>../</relativePath>
   </parent>
   <groupId>org.apache.logging.log4j</groupId>
-  <artifactId>log4j-api</artifactId>
+  <artifactId>log4j-taglib</artifactId>
   <packaging>jar</packaging>
-  <name>Apache Log4j API</name>
-  <description>The Log4J API</description>
+  <name>Apache Log4j Tag Library</name>
+  <description>Apache Log4j Tag Library for Web Applications</description>
+  <contributors>
+    <contributor>
+      <name>Nick Williams</name>
+      <email>nicholas@nicholaswilliams.net</email>
+    </contributor>
+  </contributors>
   <properties>
     <log4jParentDir>${basedir}/..</log4jParentDir>
-    <docLabel>API Documentation</docLabel>
-    <projectDir>/api</projectDir>
+    <docLabel>Log4j Tag Library Documentation</docLabel>
+    <projectDir>/taglib</projectDir>
   </properties>
   <dependencies>
     <dependency>
-      <groupId>commons-httpclient</groupId>
-      <artifactId>commons-httpclient</artifactId>
-      <version>3.1</version>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>2.5</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet.jsp</groupId>
+      <artifactId>jsp-api</artifactId>
+      <version>2.1</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <type>test-jar</type>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -61,7 +88,6 @@
         </reportSets>
         <configuration>
           <issueLinkTemplate>%URL%/show_bug.cgi?id=%ISSUE%</issueLinkTemplate>
-          <useJql>true</useJql>
         </configuration>
       </plugin>
       <plugin>
@@ -86,7 +112,7 @@
             Apache Logging, Apache Log4j, Log4j, Apache, the Apache feather logo, the Apache Logging project logo,
             and the Apache Log4j logo are trademarks of The Apache Software Foundation.</p>]]></bottom>
           <!-- module link generation is completely broken in the javadoc plugin for a multi-module non-aggregating
-         project -->
+               project -->
           <detectOfflineLinks>false</detectOfflineLinks>
           <linksource>true</linksource>
           <tags>
@@ -123,7 +149,7 @@
         <configuration>
           <threshold>Normal</threshold>
           <effort>Default</effort>
-          <excludeFilterFile>${log4jParentDir}/findbugs-exclude-filter.xml</excludeFilterFile>
+          <excludeFilterFile>findbugs-exclude-filter.xml</excludeFilterFile>
         </configuration>
       </plugin>
       <plugin>
@@ -163,6 +189,11 @@
             <reports />
           </reportSet>
         </reportSets>
+      </plugin>
+      <plugin>
+        <groupId>net.sourceforge.maven-taglib</groupId>
+        <artifactId>maven-taglib-plugin</artifactId>
+        <version>2.4</version>
       </plugin>
     </plugins>
   </reporting>
