--- a/web/pom.xml
+++ b/web/pom.xml
@@ -26,8 +26,8 @@
   <groupId>org.apache.logging.log4j.adapters</groupId>
   <artifactId>log4j-web</artifactId>
   <packaging>jar</packaging>
-  <name>Log4j Web Adapters</name>
-  <description>Log4j Adapters for Web Applications</description>
+  <name>Apache Log4j Web Adapters</name>
+  <description>Apache Log4j Adapters for Web Applications</description>
   <properties>
     <log4jParentDir>${basedir}/..</log4jParentDir>
     <docLabel>Log4j Web Application Documentation</docLabel>
@@ -53,7 +53,7 @@
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
-      <version>2.4</version>
+      <version>2.5</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
