[LOG4J2-206] Use the same Maven group ID for all artifacts: org.apache.logging.log4j. The group ID org.apache.logging.log4j.adapters is no longer used.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1466901 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j-async/pom.xml
+++ b/log4j-async/pom.xml
@@ -57,7 +57,7 @@
       <version>3.0.0.beta3</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.logging.log4j.adapters</groupId>
+      <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-1.2-api</artifactId>
       <scope>test</scope>
     </dependency>
