--- a/flume-ng/pom.xml
+++ b/flume-ng/pom.xml
@@ -23,7 +23,7 @@
     <version>2.0-beta5-SNAPSHOT</version>
     <relativePath>../</relativePath>
   </parent>
-  <groupId>org.apache.logging.log4j.adapters</groupId>
+  <groupId>org.apache.logging.log4j</groupId>
   <artifactId>log4j-flume-ng</artifactId>
   <packaging>jar</packaging>
   <name>Apache Log4j Flume NG Bridge</name>
@@ -48,12 +48,12 @@
       <artifactId>je</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.apache.logging.log4j.adapters</groupId>
+      <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-slf4j-impl</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.apache.logging.log4j.adapters</groupId>
+      <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-1.2-api</artifactId>
       <scope>test</scope>
     </dependency>
