--- a/jcl-bridge/pom.xml
+++ b/jcl-bridge/pom.xml
@@ -25,7 +25,7 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.apache.logging.log4j.adapters</groupId>
+  <groupId>org.apache.logging.log4j</groupId>
   <artifactId>log4j-jcl</artifactId>
   <packaging>jar</packaging>
   <name>Apache Log4j Commons Logging Bridge</name>
