--- a/log4j12-api/pom.xml
+++ b/log4j12-api/pom.xml
@@ -23,7 +23,7 @@
     <version>2.0-beta5-SNAPSHOT</version>
     <relativePath>../</relativePath>
   </parent>
-  <groupId>org.apache.logging.log4j.adapters</groupId>
+  <groupId>org.apache.logging.log4j</groupId>
   <artifactId>log4j-1.2-api</artifactId>
   <packaging>jar</packaging>
   <name>Apache Log4j 1.x Compatibility API</name>
