--- a/samples/flume-embedded/pom.xml
+++ b/samples/flume-embedded/pom.xml
@@ -45,11 +45,11 @@
       <artifactId>log4j-core</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.apache.logging.log4j.adapters</groupId>
+      <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-web</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.apache.logging.log4j.adapters</groupId>
+      <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-flume-ng</artifactId>
     </dependency>
     <dependency>
