added Nick as contributor, moved Remko to developers list
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1476818 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -56,15 +56,23 @@
       <name>Scott Deboy</name>
       <email>sdeboy@apache.org</email>
     </developer>
-  </developers>
-  <contributors>
-    <contributor>
+    <developer>
+      <id>rpopma</id>
       <name>Remko Popma</name>
-      <email>remkop@yahoo.com</email>
+      <email>rpopma@apache.org</email>
       <roles>
         <role>Async Low-Latency Loggers, log4j JMX support</role>
       </roles>
-      <timezone>+9</timezone>
+    </developer>
+  </developers>
+  <contributors>
+    <contributor>
+      <name>Nick Williams</name>
+      <email>nicholas@nicholaswilliams.net</email>
+      <roles>
+        <role>JSP Tag Library</role>
+      </roles>
+      <timezone>-6</timezone>
       <properties>
       </properties>
     </contributor>
