--- a/api/pom.xml
+++ b/api/pom.xml
@@ -121,6 +121,7 @@
         <artifactId>findbugs-maven-plugin</artifactId>
         <version>2.3.2</version>
         <configuration>
+          <fork>false</fork>
           <threshold>Normal</threshold>
           <effort>Default</effort>
           <excludeFilterFile>${log4jParentDir}/findbugs-exclude-filter.xml</excludeFilterFile>
