LOG4J-235: made dependency on jconsole optional
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1478758 13f79535-47bb-0310-9956-ffa450edef68

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -370,6 +370,7 @@
 					<version>1.6.0</version>
 					<scope>system</scope>
 					<systemPath>${java.home}/../lib/jconsole.jar</systemPath>
+					<optional>true</optional>
 				</dependency>
 			</dependencies>
 		</profile>
@@ -388,6 +389,7 @@
 					<version>1.6.0</version>
 					<scope>system</scope>
 					<systemPath>${java.home}/../Classes/jconsole.jar</systemPath>
+					<optional>true</optional>
 				</dependency>
 			</dependencies>
 		</profile>
