LOG4J2-237: moved JMX client GUI classes into separate jmx-gui submodule
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1479120 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -601,6 +601,7 @@
     <module>flume-ng</module>
     <module>web</module>
     <module>taglib</module>
+    <module>jmx-gui</module>
     <module>samples</module>
   </modules>
   <profiles>
