--- a/api/pom.xml
+++ b/api/pom.xml
@@ -119,9 +119,10 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>findbugs-maven-plugin</artifactId>
-        <version>2.3.2</version>
+        <version>2.5.2</version>
         <configuration>
-          <fork>false</fork>
+          <fork>true</fork>
+          <jvmArgs>-Duser.language=en</jvmArgs>
           <threshold>Normal</threshold>
           <effort>Default</effort>
           <excludeFilterFile>${log4jParentDir}/findbugs-exclude-filter.xml</excludeFilterFile>
