--- a/jcl-bridge/pom.xml
+++ b/jcl-bridge/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <artifactId>log4j</artifactId>
     <groupId>org.apache.logging.log4j</groupId>
-    <version>2.0-beta6-SNAPSHOT</version>
+    <version>2.0-beta6</version>
     <relativePath>../</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
