--- a/taglib/pom.xml
+++ b/taglib/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j</artifactId>
-    <version>2.0-beta6-SNAPSHOT</version>
+    <version>2.0-beta6</version>
     <relativePath>../</relativePath>
   </parent>
   <groupId>org.apache.logging.log4j</groupId>
