--- a/samples/flume-embedded/pom.xml
+++ b/samples/flume-embedded/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <artifactId>log4j-samples</artifactId>
     <groupId>org.apache.logging.log4j.samples</groupId>
-    <version>2.0-beta6</version>
+    <version>2.0-beta7-SNAPSHOT</version>
   </parent>
   <groupId>org.apache.logging.log4j.samples</groupId>
   <artifactId>flume-embedded</artifactId>
