--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,7 @@
     <javadoc.plugin.version>2.9</javadoc.plugin.version>
     <surefire.plugin.version>2.14.1</surefire.plugin.version>
     <rat.plugin.version>0.8</rat.plugin.version>
+    <pdf.plugin.version>1.2</pdf.plugin.version>
     <manifestfile>target/osgi/MANIFEST.MF</manifestfile>
     <maven.compile.source>1.6</maven.compile.source>
     <maven.compile.target>1.6</maven.compile.target>
@@ -513,7 +514,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-pdf-plugin</artifactId>
-        <version>1.2</version>
+        <version>${pdf.plugin.version}</version>
         <executions>
           <execution>
             <id>pdf</id>
@@ -662,7 +663,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-pdf-plugin</artifactId>
-            <version>1.2</version>
+            <version>${pdf.plugin.version}</version>
             <executions>
               <execution>
                 <id>pdf</id>
